# SimpleSynth

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TESTING.md
.github/workflows/: ci.yml
cmake/: Info.plist.in
plugin/: DistrhoPluginInfo.h  SimpleSynthParams.h  SimpleSynthPlugin.cpp
src/: SimpleSynth.cpp  pm_compat.h
src/Common/: CPPProcs.hpp  CPPTypes.hpp  clap_ump.h  pm_midi.cpp  pm_midi.h
src/Module/: ADSRHelper.cpp  ADSRModule.cpp  ADSRModule.hpp  CombineModule.cpp  CombineModule.hpp  FinalModule.cpp  Module.hpp  ModuleFactory.hpp  SinOscillatorModule.hpp  SlewModule.cpp  SlewModule.hpp
src/UI/: .gitkeep  GroupBox.hpp  Knob.hpp  SimpleSynthUI.cpp
src/Voice/: ModuleInitSpecs.hpp  ModuleMap.cpp  ModuleMap.hpp  Voice.hpp  VoiceManager.hpp
src/pm/: ADSRHelper.hpp  ConnectionCommandQueue.hpp  FinalModule.hpp  KPBuffPairHelper.hpp  ModuleFactory.cpp  ModuleGraph.hpp  ParamAddressMacros.h  PitchConverter.hpp  PitchConverterModule.cpp  PitchConverterModule.hpp  SinOscillatorModule.cpp  Voice.cpp  VoiceManager.cpp  VoiceStateManager.cpp  VoiceStateManager.hpp  clap_ump.h  pm_addresses.h  pm_compat.h  pm_midi.cpp  pm_midi.h  pm_module_specs.cpp  pm_param_data.cpp  pm_param_data.h  pm_params.h
test/: host_smoke.cpp  pm_adsr_test.cpp  pm_factory_test.cpp  pm_module_test.cpp  pm_modules_test.cpp  pm_selftest.cpp  pm_sinosc_test.cpp  pm_voice_test.cpp  pm_voicemanager_test.cpp
